# PDF-Reader

./: .replit  build_native_libraries.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
.github/workflows/: eas-build.yml
attached_assets/: 2026-03-20_23-16-20_debug_log_1774026996614.txt  2026-03-21_06-28-12_debug_log_1774052963451.txt  Pasted-Running-expo-doctor-Running-17-checks-on-your-project-1_1774020295980.txt  Pasted-W-fpowertools-app-7616-Unexpected-CPU-variant-for-x86-x_1774027365378.txt
mobile/: .gitignore  app.json  eas.json  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  index.tsx  tools.tsx
mobile/app/components/: PagePlaceholder.tsx  ToolShell.tsx
mobile/app/context/: ContinueContext.tsx  PasswordContext.tsx  ThemeContext.tsx
mobile/app/screens/: auto-process.tsx  booklet.tsx  compress.tsx  enhance-contrast.tsx  four-up-booklet.tsx  grayscale.tsx  image-to-pdf.tsx  invert.tsx  merge.tsx  nup.tsx  ocr.tsx  organize.tsx  pdf-to-image.tsx  reader.tsx  remove-pages.tsx  repair.tsx  resize.tsx  rotate.tsx  settings.tsx  split-by-line.tsx  split.tsx  whitener.tsx
mobile/app/utils/: cleanup.ts  docxGenerator.ts  filePicker.ts  fourUpBooklet.ts  geminiService.ts  nativeModules.ts  outputPath.ts  paddleOcrService.ts
mobile/app/utils/__tests__/: filePicker.test.ts  fourUpBooklet.test.ts
mobile/coverage/: clover.xml  coverage-final.json  lcov.info
mobile/coverage/lcov-report/: index.html
mobile/coverage/lcov-report/app/: _layout.tsx.html  index.html  index.tsx.html  tools.tsx.html
mobile/coverage/lcov-report/app/components/: PagePlaceholder.tsx.html  ToolShell.tsx.html  index.html
mobile/coverage/lcov-report/app/context/: ContinueContext.tsx.html  PasswordContext.tsx.html  ThemeContext.tsx.html  index.html
mobile/coverage/lcov-report/app/screens/: auto-process.tsx.html  booklet.tsx.html  compress.tsx.html  enhance-contrast.tsx.html  four-up-booklet.tsx.html  grayscale.tsx.html  image-to-pdf.tsx.html  index.html  invert.tsx.html  merge.tsx.html  nup.tsx.html  ocr.tsx.html  organize.tsx.html  pdf-to-image.tsx.html  remove-pages.tsx.html  repair.tsx.html  resize.tsx.html  rotate.tsx.html  settings.tsx.html  split-by-line.tsx.html  split.tsx.html  whitener.tsx.html
mobile/coverage/lcov-report/app/utils/: cleanup.ts.html  docxGenerator.ts.html  filePicker.ts.html  fourUpBooklet.ts.html  geminiService.ts.html  index.html  nativeModules.ts.html  outputPath.ts.html  paddleOcrService.ts.html
mobile/native/: CMakeLists.txt  mupdf_bridge.cpp  qpdf_bridge.cpp
mobile/native/kotlin/com/pdfpowertools/native/: MuPDFBridge.kt  QPDFBridge.kt
mobile/native/src/: mupdf_bridge.cpp  qpdf_bridge.cpp
mobile/plugins/: withPdfNative.js  withPdfNdk.js
scripts/: build_native_libraries.sh
